Fixed HTML5 syntax

--- a/src/_projects/html5.html
+++ b/src/_projects/html5.html
@@ -13,7 +13,7 @@ gallery:
   - image: 
     caption: "This is the first sample image caption"
   - image: 
-    caption: "This is the second sample image caption:
+    caption: "This is the second sample image caption"
 videos:
   - title: HTML5 Video Sample 1
     url:
