--- a/src/_projects/html5.html
+++ b/src/_projects/html5.html
@@ -1,24 +1,24 @@
 ---
 layout: project
 title: HTML5
-
 client: W3C
-summary: "This is the summary of the HTML 5 Project"
+summary: This is the summary of the HTML 5 Project
 description:
-  situation_html: "<p>Ok, here's the situation.</p>"
-  solution_html: "<p>This is the solution we presented.</p>"
-  results_html: "<p>Her is what happened.</p>"
-completion_date: 2012-03-23
+  situation_html: '<p>Ok, here''s the situation.</p>'
+  solution_html: <p>This is the solution we presented.</p>
+  results_html: <p>Her is what happened.</p>
+completion_date: 2012-03-23 00:00:00
 gallery:
-  - image: 
-    caption: "This is the first sample image caption"
-  - image: 
-    caption: "This is the second sample image caption"
+  - image: /uploads/html5-shirt.png
+    caption: This is the first sample image caption
+  - image:
+    caption: This is the second sample image caption
 videos:
   - title: HTML5 Video Sample 1
     url:
-    caption: "This is the first sample video caption"
+    caption: This is the first sample video caption
   - title: HTML5 Video Sample 2
     url:
-    caption: "This is the second sample video caption"
+    caption: This is the second sample video caption
 ---
+
