updated data models

--- a/src/_projects/_defaults.html
+++ b/src/_projects/_defaults.html
@@ -1,7 +1,6 @@
 ---
 layout: project
 title:
-
 client:
 summary:
 description:
@@ -16,5 +15,5 @@ videos:
   - title:
     url:
     caption:
-
+tags:
 ---
