homepage layout, about us layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,77 @@
 ---
-layout: homepage
-title: Project Template
+layout: default
+title: Home
 ---
+
+<div class="hero">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <img src="https://via.placeholder.com/1400x800?text=Animation" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<section class="bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <h2>Learn about working with us & what makes us experts</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique aut quam quis debitis vero omnis, pariatur dolore consequatur excepturi, autem qui blanditiis eveniet, nostrum dolor.</p>
+          <h2>Philosophy</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, sed. Vitae tenetur aperiam nemo ab esse amet animi, debitis obcaecati dignissimos quo beatae error delectus?</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          Work Section
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <img src="https://via.placeholder.com/1400x800?text=Logo+Pile" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <h2>Culture</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci odit recusandae eveniet, soluta at eaque necessitatibus deserunt omnis itaque sapiente, error rem minus nam ducimus.</p>
+          <img src="https://via.placeholder.com/1400x800?text=Logo+Pile" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content text-center">
+          <a href="#" class="btn btn-primary">Contact CTA</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+{% include testimonials.html %}
