--- a/src/_projects/chris-walker.html
+++ b/src/_projects/chris-walker.html
@@ -7,7 +7,7 @@ description:
   situation_html:
   solution_html:
   results_html:
-completion_date:
+completion_date: 2018-09-14 20:40:55
 gallery:
   - image:
     caption:
