Updated 'src/_projects/html5.html' via CloudCannon

--- a/src/_projects/html5.html
+++ b/src/_projects/html5.html
@@ -4,22 +4,24 @@ title: HTML5
 client: W3C
 summary: This is the summary of the HTML 5 Project
 description:
-  situation_html: "<p>Ok, here's the situation.</p>"
-  solution_html: "<p>This is the solution we presented.</p>"
-  results_html: "<p>Here is what happened.</p>"
-completion_date: 2012-03-23
+  situation_html: '<p>Ok, here''s the situation.</p>'
+  solution_html: <p>This is the solution we presented.</p>
+  results_html: <p>Here is what happened.</p>
+completion_date: 2012-03-23 00:00:00
 gallery:
-  - image: "/uploads/html5-shirt.png"
-    caption: "This is the first sample image caption"
-  - image: "/uploads/html5-shirt.png"
-    caption: "This is the second sample image caption"
+  - image: /uploads/html5-shirt.png
+    caption: This is the first sample image caption
+  - image: /uploads/html5-shirt.png
+    caption: This is the second sample image caption
 videos:
   - title: HTML5 Video Sample 1
-    url: 
-    caption: "This is the first sample video caption"
+    url:
+    caption: This is the first sample video caption
   - title: HTML5 Video Sample 2
     url:
     caption: This is the second sample video caption
-tags:    
+tags:
+  - branding
+  - web
 ---
 
