Updated 'src/_projects/daughter-mfg.html' via CloudCannon

--- a/src/_projects/daughter-mfg.html
+++ b/src/_projects/daughter-mfg.html
@@ -1,11 +1,22 @@
 ---
 layout: project
 title: Daughter MFG
-client:
+client: Daughter MFG
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>A family business that began as a artful experiment turned into a full
+    fledged passion for product design which lead co-founders Mario and Kitty
+    Costello to form Daughter MFG. With a name picked out- inspired by their two
+    daughters- and a lineup of handcrafted brass and resin home products, they
+    came to Ocupop looking for an identity to call home both off and on the
+    web.</p>
+  solution_html: >-
+    <p>We crafted a sophisticated brand identity that mirrors the elegant and
+    modern yet timeless style of the products they create. It is clear they are
+    passionate and we wanted that dedication and attention to detail to come
+    across in the packaging and website design as an extension of the
+    brand.&nbsp;</p>
   results_html:
 completion_date:
 gallery:
