Updated 'src/_projects/daughter-mfg.html' via CloudCannon

--- a/src/_projects/daughter-mfg.html
+++ b/src/_projects/daughter-mfg.html
@@ -2,7 +2,12 @@
 layout: project
 title: Daughter MFG
 client: Daughter MFG
-summary:
+summary: >-
+  Daughter Manufacturing is a husband and wife design team based in the Bay Area
+  designing and manufacturing high-level home accessories made to last a
+  lifetime and Ocupop designed a great identity, website, and product packaging
+  to reflect that elegant and modern yet timeless style that the products
+  radiate.
 description:
   situation_html: >-
     <p>A family business that began as a artful experiment turned into a full
@@ -27,4 +32,7 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - Packaging
+  - web
 ---
