--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -1,11 +1,22 @@
 ---
 layout: project
 title: Mapbox Locate
-client:
+client: Mapbox
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Mapbox is an open source mapping platform that sought out Ocupop to help
+    establish themselves as a world class tech company with branding and event
+    design for their inaugural conference at Pier 27 in San Francisco. Equipped
+    with a name and preliminary branding, Mapbox was looking for repositioning
+    of their brand to reflect the bold and cutting edge developer products and
+    culture that they are pushing out into the world.</p>
+  solution_html: >-
+    <p>We created a new identity system that focused on presenting Mapbox an
+    emerging light on the map location scene. We strategized marketing campaigns
+    and explored the edges of design with an interactive billboard, immersive
+    stage animations, and a sophisticated, futuristic aesthetic to signage and
+    digital assets.&nbsp;</p>
   results_html:
 completion_date:
 gallery:
