Updated 'src/_projects/mapbox-locate.html' via CloudCannon

--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -18,7 +18,7 @@ description:
     stage animations, and a sophisticated, futuristic aesthetic to signage and
     digital assets.&nbsp;</p>
   results_html:
-completion_date:
+completion_date: 2018-05-30 00:00:00
 gallery:
   - image:
     caption:
@@ -27,4 +27,8 @@ videos:
     url:
     caption:
 tags:
+  - web
+  - strategy
+  - branding
+  - events
 ---
