Updated 'src/_projects/google-chrome-dev-summit.html' via CloudCannon

--- a/src/_projects/google-chrome-dev-summit.html
+++ b/src/_projects/google-chrome-dev-summit.html
@@ -1,11 +1,21 @@
 ---
 layout: project
 title: Google Chrome Dev Summit
-client:
+client: Google
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Google Chrome Dev Summit is an annual web conference the celebrates the
+    power of the web and the developers that contribute to it&rsquo;s growth and
+    evolution. Taking place in various locations year after year, Google Chrome
+    Dev Summit has continuously sought out Ocupop to bring the conference to
+    life with engaging and elegant designs across the board.</p>
+  solution_html: >-
+    <p>For the last three years we have created highly effective and energetic
+    branding systems through created all the visual assets&mdash; ranging from
+    stage design, website, signage, swag, digital assets, and animation&mdash;
+    celebrating the connectedness of the chrome developer community, the power
+    of the web, and sense of wonder it creates.</p>
   results_html:
 completion_date:
 gallery:
@@ -16,4 +26,9 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - animation
+  - events
+  - illustration
+  - web
 ---
