Updated 'src/_projects/bittercube.html' via CloudCannon

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -1,11 +1,17 @@
 ---
 layout: project
 title: Bittercube
-client:
+client: Bittercube Bitters
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Bittercube Bitters slow crafts bitters using all natural ingredients, and
+    no extracts of any kind. Based in both MKE, WI and MPLS, MN, Bittercube has
+    been in the craft cocktail industry since 2009.&nbsp;</p>
+  solution_html: >-
+    <p>Bittercube sought out Ocupop to help elevate their brand perception to a
+    level which matches the quality and sophistication of not only their
+    products, but philosophy and company culture as well.</p>
   results_html:
 completion_date:
 gallery:
