contact layout, default layout, expertise layout

--- a/src/contact.html
+++ b/src/contact.html
@@ -2,8 +2,27 @@
 layout: default
 title: Contact
 ---
-
 <section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <h1>What it's like to work with us</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim fuga iste saepe incidunt dicta quae rerum praesentium, impedit minima suscipit quibusdam sint quos ipsa perspiciatis?</p>
+          <h1>What it's like to work for us</h1>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-light">
   <div class="container">
     <div class="row">
       <div class="col-12">
