--- a/src/expertise.html
+++ b/src/expertise.html
@@ -2,7 +2,18 @@
 layout: default
 title: Expertise
 ---
-
+<section class="bg-light">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <h1>Overview of Expertise</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque quia natus voluptatibus consequuntur velit deserunt aspernatur adipisci reprehenderit eligendi quidem! Repellat beatae sapiente totam eos.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <section>
   <div class="container">
     <div id="focus-accordion" class="accordion">
@@ -33,6 +44,13 @@ title: Expertise
         </div>
       </div>
       {% endfor %}
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content text-center">
+          <a href="#" class="btn btn-primary">Contact CTA</a>
+        </div>
+      </div>
     </div>
   </div>
 </section>
