--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -11,7 +11,17 @@ description:
   solution_html: >-
     <p>Bittercube sought out Ocupop to help elevate their brand perception to a
     level which matches the quality and sophistication of not only their
-    products, but philosophy and company culture as well.</p>
+    products, but philosophy and company culture as well.</p><p>As we began
+    digging into the redesign, we started our explorations with seeing if there
+    was a way to simply take the existing elements of their mark (a dropper and
+    cube of salt) and reimagine them using different forms/geometry and
+    composition. This led to our ultimate decision to extract the strongest
+    elements of their original logo &mdash; the dropper and the bitters &mdash;
+    and create a new way for this to be communicated. With Bittercube&rsquo;s
+    passion for true craftsmanship and commitment to producing their bitters by
+    hand, with care, we saw an opportunity to apply the same ideas to their
+    rebrand. We created a custom wordmark/logotype and custom, hand drawn
+    illustrations for each product offering.</p>
   results_html:
 completion_date:
 gallery:
@@ -23,3 +33,4 @@ videos:
     caption:
 tags:
 ---
+
