Updated 'src/_projects/google-developer-days.html' via CloudCannon

--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -1,11 +1,22 @@
 ---
 layout: project
 title: Google Developer Days
-client:
+client: Google
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Google Developer Days is a multi-location web developer conference which
+    showcases the&nbsp; newest developer technologies from the top minds at
+    Google and hosts developers from across the globe to be inspired by exciting
+    technical talks and hands-on learning experiences. They approached Ocupop to
+    design a cohesive brand that could be applied to 3 distinct locations and
+    celebrates the idea of building a better web together.</p>
+  solution_html: >-
+    <p>Inspired by building blocks, Ocupop designed a identity system that had
+    extensibility to be applied to the diversity in countries where this event
+    is taking place. This was achieved through bringing a creative and vibrant
+    design to marketing, stage and environmental design, signage, digital
+    assets, animation, and swag items.&nbsp;</p>
   results_html:
 completion_date:
 gallery:
