Updated 'src/_projects/homes-by-towne.html' via CloudCannon

--- a/src/_projects/homes-by-towne.html
+++ b/src/_projects/homes-by-towne.html
@@ -1,13 +1,24 @@
 ---
 layout: project
 title: Homes by Towne
-client:
+client: Homes by Towne
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Homes by Towne is a semi-custom home developer operating across the US.
+    With over 30 communities spanning from Florida to Hawaii, Homes by Towne has
+    been constructing homes for nearly 70 years. Homes by Towne approached
+    Ocupop seeking a clean and fresh rebrand and new website that made it easy
+    for would-be home buyers to find and build their dream home.</p>
+  solution_html: >-
+    <p>A company so caring about it&rsquo;s customers and product needed a new
+    identity that showed that. We developed a new brand system evolving
+    Homes&rsquo; old identity into a new mark showcasing the communities they
+    create. A new website was also built with a streamlined user experience
+    designed to compare models and drive buyers into a Homes by Towne sales
+    office.</p>
   results_html:
-completion_date:
+completion_date: 2018-09-15 10:24:56
 gallery:
   - image:
     caption:
@@ -16,4 +27,6 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - web
 ---
