Updated 'src/_projects/refed.html' via CloudCannon

--- a/src/_projects/refed.html
+++ b/src/_projects/refed.html
@@ -4,8 +4,21 @@ title: ReFED
 client:
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>A multi-stakeholder nonprofit, powered by an influential network of
+    business, nonprofit, foundation, and government leaders committed to
+    reducing U.S. food waste. ReFED takes a data-driven approach to move the
+    food system from acting on instinct to insights to solve our national food
+    waste problem. They came to Ocupop looking for an identity and design
+    consulting which lead to the creation of the Roadmap to Reduce Food Waste by
+    20%, a handful of stakeholder reports and a website to reflect this data
+    &amp; approach with tools to inform and generate action.</p>
+  solution_html: >-
+    <p>They needed a clear name that connected to the mission with a brand
+    identity that looked trustworthy, economic and authoritative while still
+    conveying the environmental and sustainable connections.&nbsp; Ocupop
+    assisted in the name, created a brand identity system, Designed the Roadmap
+    Report and stakeholder papers, a website and additional web tools.</p>
   results_html:
 completion_date:
 gallery:
