--- a/src/_projects/polymer.html
+++ b/src/_projects/polymer.html
@@ -4,8 +4,15 @@ title: Polymer
 client:
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Polymer Summit was a two day event consisting of breakout sessions and
+    code labs, along with an all day summit of polymer tech talks and an after
+    hours event</p>
+  solution_html: >-
+    <p>&bull; 2015 &mdash; Amsterdam - Coat of arms, Future-facing,
+    modern</p><p>&bull; 2016 &mdash; London - Crown built out of modular
+    pieces</p><p>&bull; 2017 &mdash; Copenhagen - Scandinavian design, "Use the
+    Platform"</p>
   results_html:
 completion_date:
 gallery:
