--- a/src/_projects/ietf.html
+++ b/src/_projects/ietf.html
@@ -7,7 +7,7 @@ description:
   situation_html:
   solution_html:
   results_html:
-completion_date:
+completion_date: 2018-09-15 12:28:14
 gallery:
   - image:
     caption:
@@ -16,4 +16,5 @@ videos:
     url:
     caption:
 tags:
+  - branding
 ---
