--- a/src/_projects/google-cloud.html
+++ b/src/_projects/google-cloud.html
@@ -1,13 +1,21 @@
 ---
 layout: project
 title: Google Cloud
-client:
+client: Google
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Google Cloud is a fairly new division within the Google App Suite.
+    Facilitating businesses of all sizes, Google Cloud makes it easy for teams
+    to build and scale their databases fast and without having to worry about
+    infrastructure.</p>
+  solution_html: >-
+    <p>In order to spread this new service across the globe, Ocupop stepped in
+    and created a series of official training certificates, informational
+    postcards and flyers, to large scale presentations shown around the
+    world.</p>
   results_html:
-completion_date:
+completion_date: 2018-09-12 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +24,5 @@ videos:
     url:
     caption:
 tags:
+  - presentation
 ---
