--- a/src/_projects/refed.html
+++ b/src/_projects/refed.html
@@ -1,7 +1,7 @@
 ---
 layout: project
 title: ReFED
-client:
+client: ReFED
 summary:
 description:
   situation_html: >-
@@ -20,7 +20,7 @@ description:
     assisted in the name, created a brand identity system, Designed the Roadmap
     Report and stakeholder papers, a website and additional web tools.</p>
   results_html:
-completion_date:
+completion_date: 2018-01-31 00:00:00
 gallery:
   - image:
     caption:
