add local placeholder images

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@ title: Home
     <div class="row">
       <div class="col">
         <div class="content">
-          <img src="https://via.placeholder.com/1400x800?text=Animation" class="img-fluid" alt="">
+          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@ title: Home
     <div class="row">
       <div class="col">
         <div class="content">
-          <img src="https://via.placeholder.com/1400x800?text=Logo+Pile" class="img-fluid" alt="">
+          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -57,7 +57,7 @@ title: Home
         <div class="content">
           <h2>Culture</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci odit recusandae eveniet, soluta at eaque necessitatibus deserunt omnis itaque sapiente, error rem minus nam ducimus.</p>
-          <img src="https://via.placeholder.com/1400x800?text=Logo+Pile" class="img-fluid" alt="">
+          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@ title: Home
     <div class="row">
       <div class="col">
         <div class="content text-center">
-          <a href="#" class="btn btn-primary">Contact CTA</a>
+          <a href="/contact" class="btn btn-primary">Contact CTA</a>
         </div>
       </div>
     </div>
