--- a/src/us.html
+++ b/src/us.html
@@ -22,7 +22,7 @@ title: Us
     <div class="row">
       <div class="col">
         <div class="content">
-          <img src="https://via.placeholder.com/1400x800?text=Team+Photos+Videos" class="img-fluid" alt="">
+          <img src="{{ site.placeholder.hero }}" class="img-fluid" alt="">
         </div>
       </div>
     </div>
