Updated 'src/_projects/polymer.html' via CloudCannon

--- a/src/_projects/polymer.html
+++ b/src/_projects/polymer.html
@@ -1,7 +1,7 @@
 ---
 layout: project
-title: Polymer
-client:
+title: Polymer Summit
+client: Polymer Project
 summary:
 description:
   situation_html: >-
@@ -23,4 +23,6 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - events
 ---
