Updated 'src/_projects/widevine.html' via CloudCannon

--- a/src/_projects/widevine.html
+++ b/src/_projects/widevine.html
@@ -7,7 +7,7 @@ description:
   situation_html:
   solution_html:
   results_html:
-completion_date:
+completion_date: 2018-04-20 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +16,6 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - web
 ---
