Updated 'src/_projects/polymer.html' via CloudCannon

--- a/src/_projects/polymer.html
+++ b/src/_projects/polymer.html
@@ -14,7 +14,7 @@ description:
     pieces</p><p>&bull; 2017 &mdash; Copenhagen - Scandinavian design, "Use the
     Platform"</p>
   results_html:
-completion_date:
+completion_date: 2017-08-23 00:00:00
 gallery:
   - image:
     caption:
