--- a/src/_projects/refed.html
+++ b/src/_projects/refed.html
@@ -20,7 +20,7 @@ description:
     assisted in the name, created a brand identity system, Designed the Roadmap
     Report and stakeholder papers, a website and additional web tools.</p>
   results_html:
-completion_date: 2018-01-31 00:00:00
+completion_date: 2016-09-30 00:00:00
 gallery:
   - image:
     caption:
@@ -29,4 +29,8 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - web
+  - strategy
 ---
+
