Updated 'src/_projects/4p-foods.html' via CloudCannon

--- a/src/_projects/4p-foods.html
+++ b/src/_projects/4p-foods.html
@@ -1,13 +1,20 @@
 ---
 layout: project
 title: 4P Foods
-client:
+client: 4P Foods
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>4P brings together individuals and families who want high-quality, fresh,
+    natural food with the farmers who are working tirelessly to grow food in
+    their area. They collect food from a network of over 200 farms in the D.C.
+    area and deliver weekly produce, meat or dairy bags directly to
+    consumers.</p>
+  solution_html: >-
+    <p>Ocupop created a new identity system that focused on capturing the local
+    &amp; friendly appeal balanced with trust and impact.</p>
   results_html:
-completion_date:
+completion_date: 2018-08-15 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +23,5 @@ videos:
     url:
     caption:
 tags:
+  - branding
 ---
