Updated 'src/_projects/kunoa.html' via CloudCannon

--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -1,13 +1,23 @@
 ---
 layout: project
-title: Kunoa
-client:
+title: Kunoa Cattle Co.
+client: Kunoa Cattle Co.
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Kunoa sought to change the way Hawaiians consumed beef. With nearly all
+    all cattle in Hawaii imported, Kunoa saw a system where beef could be raised
+    in a local and sustainable way with having minimal impact on the Hawaiian
+    ecosystem.</p>
+  solution_html: >-
+    <p>Putting the lush Hawaiian landscape on a pedaste, Ocupop developed an
+    identity system visually based on Hawaiian culture and sceanery. Rough hand
+    lettering paired with gritty illustrations conveyed a cowboy-tough yet
+    beautiful-woodcut feel for this sustainable food company. An informational
+    website was designed and developed to educate consumers on sustainable food
+    practices and create a local food community.</p>
   results_html:
-completion_date:
+completion_date: 2014-08-20 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +26,8 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - web
+  - illustration
 ---
+
