--- a/src/work.html
+++ b/src/work.html
@@ -12,13 +12,13 @@ permalink: /work/
       </div>
     </div>
     <div class="row">
-      <div class="col">
-          <ul>
-            {% for project in site.projects %}
-              <li><a href="{{ project.url }}" title="{{ project.title }}">{{ project.title }}</a></li>
-            {% endfor %}
-          </ul>
+      {% for project in site.projects %}
+      <div class="work-project col-xs-12 col-lg-6">
+        <img src="https://via.placeholder.com/1280x900?text=logo" class="img-fluid" alt="">
+        <a href="{{ project.url }}" title="{{ project.title }}">{{ project.title }}</a>
+        <p>Tag Tag Tag</p>
       </div>
-    </div>  
+      {% endfor %}
+]    </div>  
   </div>
 </section>
