Updated 'src/_projects/first-launch.html' via CloudCannon

--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -1,13 +1,26 @@
 ---
 layout: project
 title: FIRST Launch
-client:
+client: FIRST Inspires
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>FIRST Inspires aims to get children ages 6-18 involved in STEM and STEM
+    related fields. Each year FIRST holds a themed tournament comprising of four
+    different competitions children participate in. Each competition presents
+    the children with a new challenge that requires teamwork, communication, and
+    STEM principles to complete. Oh and robots too.</p>
+  solution_html: >-
+    <p>FIRST came to Ocupop looking for a cohesive brand identity for their 2019
+    competition that felt professional while appealing to kids. Under the
+    overarching brand, all four competitions also need identities that were tied
+    to the theme but distinctly different. Teaser animations and illustrations
+    were developed to spark interest alongside an overarching website explaining
+    and informing this years theme and challenges. Clothing items and posters
+    were also developed for participants to show their pride alongside other
+    various swag items</p>
   results_html:
-completion_date:
+completion_date: 2019-01-01 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +29,9 @@ videos:
     url:
     caption:
 tags:
+  - animation
+  - branding
+  - illustration
+  - strategy
+  - web
 ---
