Updated 'src/_projects/sustainable-america.html' via CloudCannon

--- a/src/_projects/sustainable-america.html
+++ b/src/_projects/sustainable-america.html
@@ -1,13 +1,21 @@
 ---
 layout: project
 title: Sustainable America
-client:
+client: Sustainable America
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>Sustainable America is an environmental non-profit organization with the
+    mission to make the nation&rsquo;s food and fuel systems more efficient and
+    resilient. Through broad public education we work to reduce oil usage and
+    increase food availability in the United States.</p>
+  solution_html: >-
+    <p>They needed a brand identity to reflect an sophisticated, modern
+    aesthetic that reflects the organizations sustainable mission. Ocupop
+    created a brand identity system, websites, infographics, various
+    initiatives, and animations.</p>
   results_html:
-completion_date:
+completion_date: 2018-08-31 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +24,8 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - illustration
+  - animation
+  - web
 ---
