Updated 'src/_projects/html-5.html' via CloudCannon

--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -1,13 +1,22 @@
 ---
 layout: project
 title: HTML 5
-client:
+client: W3C
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>The web is a constantly evolving space. As more and more things becomes
+    possible to do on the web, standards must evolve; enter HTML 5, a new set of
+    syntax and tags to help clean and standardize the way HTML is written across
+    the globe.</p>
+  solution_html: >-
+    <p>Such a momentous change to the markup language needed a symbol that was
+    as strong and universal as the concepts it represented. Ocupop developed a
+    big, bold, bright badge that stands true to those concepts and symbolizes
+    the progress that happens continuously around the net. The mark remains open
+    source just as many of frameworks that power the web.<br />&nbsp;</p>
   results_html:
-completion_date:
+completion_date: 2011-03-10 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +25,5 @@ videos:
     url:
     caption:
 tags:
+  - branding
 ---
