--- a/src/_projects/schreyer-construction.html
+++ b/src/_projects/schreyer-construction.html
@@ -1,13 +1,18 @@
 ---
 layout: project
 title: Schreyer Construction
-client:
+client: Schreyer Construction
 summary:
 description:
-  situation_html:
-  solution_html:
+  situation_html: >-
+    <p>A family run construction company located in Whistler specializing in
+    high quality new construction as well as renovations and additions.</p>
+  solution_html: >-
+    <p>Ocupop created updated branding that reflects the level of design and
+    detail featured in Schreyer projects. A marketing site was also created to
+    communicate their extensive portfolio and services.</p>
   results_html:
-completion_date:
+completion_date: 2016-12-31 00:00:00
 gallery:
   - image:
     caption:
@@ -16,4 +21,6 @@ videos:
     url:
     caption:
 tags:
+  - branding
+  - web
 ---
