Added dummy copy to focus summaries, refactored focus layout, created quotes.yml

--- a/src/_focuses/strategy.html
+++ b/src/_focuses/strategy.html
@@ -1,7 +1,7 @@
 ---
 layout: focus
 title: Strategy
-summary_html:
+summary_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 featured_image:
 project:
 ---
