--- a/src/_focuses/web.html
+++ b/src/_focuses/web.html
@@ -1,6 +1,6 @@
 ---
 layout: focus
 title: Web
-summary_html:
+summary_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 featured_image:
 ---
