--- a/src/_focuses/presentation.html
+++ b/src/_focuses/presentation.html
@@ -1,7 +1,7 @@
 ---
 layout: focus
 title: Presentation
-summary_html:
+summary_html: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 featured_image:
 project:
 ---
