Added active projects and statuses

--- a/src/_projects/daughter-mfg.html
+++ b/src/_projects/daughter-mfg.html
@@ -2,6 +2,7 @@
 layout: project
 title: Daughter MFG
 client: Daughter MFG
+status: draft
 summary: >-
   Daughter Manufacturing is a husband and wife design team based in the Bay Area
   designing and manufacturing high-level home accessories made to last a
