--- a/src/_projects/heirloom.html
+++ b/src/_projects/heirloom.html
@@ -1,7 +1,8 @@
 ---
 layout: project
 title: Heirloom Liqueurs
-client:
+client: Bittercube
+status: draft
 summary:
 description:
   situation_html: >-
