--- a/src/_projects/ietf.html
+++ b/src/_projects/ietf.html
@@ -1,7 +1,8 @@
 ---
 layout: project
 title: IETF
-client:
+client: Internet Engineering Task Force
+status: draft
 summary:
 description:
   situation_html: >-
