--- a/src/_projects/schreyer-construction.html
+++ b/src/_projects/schreyer-construction.html
@@ -2,6 +2,7 @@
 layout: project
 title: Schreyer Construction
 client: Schreyer Construction
+status: draft
 summary:
 description:
   situation_html: >-
