--- a/src/_projects/sustainable-america.html
+++ b/src/_projects/sustainable-america.html
@@ -2,6 +2,7 @@
 layout: project
 title: Sustainable America
 client: Sustainable America
+status: draft
 summary:
 description:
   situation_html: >-
