added featured status

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -2,7 +2,7 @@
 layout: project
 title: Bittercube Bitters
 client: Bittercube Bitters
-status: draft
+status: active
 summary:
 description:
   situation_html: >-
