--- a/src/index.html
+++ b/src/index.html
@@ -6,60 +6,115 @@ title: Home
 <div class="hero">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         <div class="content">
-          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
+          <p class="quote">"I have never felt more alive!"</p>
+          <p class="quote-author"><strong>Bert Appward</strong><br>Fortune 100 Company</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <p>Yeah. No. That’s complete bullshit. Though we have tons of testimonials exalting the breadth of our awesomeness (from Jeff’s beard to Michael’s hair to Abby’s quality nicknames to even our work itself), this quote is made up, but it’s what we expect every client to say after working with Ocupop.</p>
+          <p>The power of design thinking paired with unparalleled enthusiasm and empathy makes for a creative experience like no other. Equal parts energizing and enlightening, our client relationships are tight. We dig deep, debate, and deliver together—laughing, crying and fighting like hell to change lives... or at very least blow minds.</p>
         </div>
       </div>
     </div>
   </div>
 </div>
-<section class="bg-light">
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="d-flex h-100 flex-column justify-content-between">
+                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-md-6">
+              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+            </div>
+            <div class="col-md-6">
+              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="bg-dark text-white">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <div class="content">
+          <p class="quote">“Not necessarily what I wanted, but exactly what I needed.”</p>
+          <p class="quote-author"><strong>Jesse Fink</strong><br>Founder, Refed and Priceline.com</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <p>As experts, we’re hired to deliver solutions not options. We’ve honed an uncanny ability to be direct yet diplomatic, concise yet collaborative— tackling tough conversations and even tougher design problems together. We avoid the ‘consultant-cop-out’ of forcing clients to choose between multiple partially thought out options and instead work collaboratively toward one reasoned, powerful solution.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
   <div class="container">
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <h2>Learn about working with us & what makes us experts</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique aut quam quis debitis vero omnis, pariatur dolore consequatur excepturi, autem qui blanditiis eveniet, nostrum dolor.</p>
-          <h2>Philosophy</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, sed. Vitae tenetur aperiam nemo ab esse amet animi, debitis obcaecati dignissimos quo beatae error delectus?</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="content">
-          Work Section
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="content">
           <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
         </div>
       </div>
     </div>
-  </div>
-</section>
-<section>
-  <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-12">
         <div class="content">
-          <h2>Culture</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci odit recusandae eveniet, soluta at eaque necessitatibus deserunt omnis itaque sapiente, error rem minus nam ducimus.</p>
-          <img src="{{ site.placeholders.hero }}" class="img-fluid" alt="">
+          <p class="quote">“BD? Screw that, We do good work for good people and they make referrals. For 20 years!”</p>
+          <p class="quote-author"><strong>Michael Nieling</strong><br>Founder and Creative Director</p>
+        </div>
+        <div class="content">
+          <p>No cheesy sale-sters in EXPRESS shiney shirts, no account planners, no middle men, and none of the overhead that goes along with ‘em! We interface directly with decision makers and fanatically pursue perfection in planning, execution, and implementation. Projects are completed quickly and e ciently, and with refreshing candor and commitment...always aspiring to the ideal that we work WITH you, not for you.</p>
+          <a href="#" class="btn btn-inline">Contact</a>
         </div>
       </div>
+    </div>
+  </div>
+</section>
+<section class="bg-dark text-white">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <div class="content">
+          <p class="quote">“If you guys are such hot shit, who have you worked with? Anything I have ever seen?”</p>
+          <p class="quote-author"><strong>You (being a little grumpy, honestly)</strong><br>Potential Ocupop Client</p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <p>Ocupop has helped to de ne the visual language of the web and beyond since 2000, we’ve led design projects for companies at all ends of the spectrum—from Google, Facebook, and Mozilla to PBS, SXSW, and Burton Snowboards to countless successful (and horribly failed) startups, our small, super-powered team has created some of the most in uential logos, icons, campaigns and user interfaces on the web and beyond.</p>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      {% for i in (1..8) %}
+      <div class="col-md-3">
+        <div class="content">
+          <img src="{{ site.placeholders.aspect-1x1 }}" alt="" class="img-fluid">
+        </div>
+      </div>
+      {% endfor %}
     </div>
   </div>
 </section>
@@ -67,8 +122,36 @@ title: Home
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="content text-center">
-          <a href="/contact" class="btn btn-primary">Contact CTA</a>
+        <div class="content">
+          <p class="quote">“We are DEZIGNING! Ocupop rulez SUPREME!”</p>
+          <p class="quote-author"><strong>Jon Burr</strong><br>Ocupop Web Developer, Canadian</p>
+          <p>Infamous international Vision Quests, dance parties, and spirited creative debate, Tom Collinses, skateboard ramps, and world class design. Working at Ocupop is designed to be the best job you’ve ever had—and we are always looking for the right people to add to The World’s Greatest DesignsquadTM, so drop a joke in the joke station and let’s see if you’ve got what it takes!</p>
+          <a href="#" class="btn btn-inline">Learn More</a>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <div class="row">
+            <div class="col-md-8">
+              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="d-flex h-100 flex-column justify-content-between">
+                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col-md-6">
+              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+            </div>
+            <div class="col-md-6">
+              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
