updated project details

--- a/src/_projects/4p-foods.html
+++ b/src/_projects/4p-foods.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: 4P Foods
+title: 
 client: 4P Foods
 status: draft
+completion_date: 2018-08-15 00:00:00
 summary:
 description:
   situation_html: >-
@@ -15,7 +16,7 @@ description:
     <p>Ocupop created a new identity system that focused on capturing the local
     &amp; friendly appeal balanced with trust and impact.</p>
   results_html:
-completion_date: 2018-08-15 00:00:00
+pullquote:
 gallery:
   - image:
     caption:
