--- a/src/_projects/_defaults.html
+++ b/src/_projects/_defaults.html
@@ -3,12 +3,13 @@ layout: project
 title:
 client:
 status: active
+completion_date:
 summary:
 description:
   situation_html:
   solution_html:
   results_html:
-completion_date:
+pullquote:
 gallery:
   - image:
     caption:
