--- a/src/_projects/amper.html
+++ b/src/_projects/amper.html
@@ -1,8 +1,10 @@
 ---
 layout: project
-title: Amper
+title: 
 client: Amper
 status: draft
+completion_date:
+pullquote:
 summary:
 description:
   situation_html: >-
@@ -17,7 +19,6 @@ description:
     The subtle movement and vibrant color gradients used in the website design
     bring the energy of the multitudes of types of music you can create.</p>
   results_html:
-completion_date:
 gallery:
   - image:
     caption:
