--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Bittercube Bitters
+title: 
 client: Bittercube Bitters
 status: active
+pullquote:
 summary:
 description:
   situation_html: >-
