--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Burton Learn to Ride
-client:
+title: Learn to Ride
+client: Burton
 status: active
+pullquote:
 summary:
 description:
   situation_html: >-
