--- a/src/_projects/daughter-mfg.html
+++ b/src/_projects/daughter-mfg.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Daughter MFG
+title: 
 client: Daughter MFG
 status: draft
+pullquote:
 summary: >-
   Daughter Manufacturing is a husband and wife design team based in the Bay Area
   designing and manufacturing high-level home accessories made to last a
