--- a/src/_projects/first-inspires.html
+++ b/src/_projects/first-inspires.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: FIRST Inspires
+title: 
 client: FIRST Inspires
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
