--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -3,6 +3,7 @@ layout: project
 title: FIRST Launch
 client: FIRST Inspires
 status: active
+pullquote:
 summary:
 description:
   situation_html: >-
