--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -3,6 +3,7 @@ layout: project
 title: Google Developer Days
 client: Google
 status: active
+pullquote:
 summary:
 description:
   situation_html: >-
