--- a/src/_projects/heirloom.html
+++ b/src/_projects/heirloom.html
@@ -3,6 +3,7 @@ layout: project
 title: Heirloom Liqueurs
 client: Bittercube
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
