--- a/src/_projects/homes-by-towne.html
+++ b/src/_projects/homes-by-towne.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Homes by Towne
+title: 
 client: Homes by Towne
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
