--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Kunoa Cattle Co.
+title: 
 client: Kunoa Cattle Co.
 status: active
+pullquote:
 summary:
 description:
   situation_html: >-
