--- a/src/_projects/polymer.html
+++ b/src/_projects/polymer.html
@@ -3,6 +3,7 @@ layout: project
 title: Polymer Summit
 client: Polymer Project
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
