--- a/src/_projects/schreyer-construction.html
+++ b/src/_projects/schreyer-construction.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Schreyer Construction
+title: 
 client: Schreyer Construction
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
