--- a/src/_projects/sustainable-america.html
+++ b/src/_projects/sustainable-america.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Sustainable America
+title: 
 client: Sustainable America
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
