--- a/src/_projects/sxsw.html
+++ b/src/_projects/sxsw.html
@@ -1,8 +1,9 @@
 ---
 layout: project
 title: SXSW
-client:
+client: South By Southwest
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
