--- a/src/_projects/tensorflow-dev-summit.html
+++ b/src/_projects/tensorflow-dev-summit.html
@@ -3,6 +3,7 @@ layout: project
 title: Tensorflow Dev Summit
 client: Google
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
