--- a/src/_projects/widevine.html
+++ b/src/_projects/widevine.html
@@ -1,8 +1,9 @@
 ---
 layout: project
-title: Widevine
-client:
+title: 
+client: Widevine
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
