--- a/src/_projects/ietf.html
+++ b/src/_projects/ietf.html
@@ -3,6 +3,7 @@ layout: project
 title: IETF
 client: Internet Engineering Task Force
 status: draft
+pullquote:
 summary:
 description:
   situation_html: >-
